--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,14 +1,14 @@
-name: "dataVizTutorial"
+name: dataVizTutorial
 output_dir: ../docs
 navbar:
-  title: "dataVizTutorial"
+  title: dataVizTutorial
   left:
   - text: Home
     href: index.html
-  - text: About
-    href: about.html
-  - text: License
-    href: license.html
+  right:
+  - icon: fab fa-github
+    text: Source code
+    href: https://github.com/rswaty/dataVizTutorial
 output:
   workflowr::wflow_html:
     toc: yes
